# myWisdomRestaurant

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  build.sh  config.env  config.env.example  start.sh  wisdom_restaurant.db
server/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  config.env.example
server/include/ai/: AiService.h
server/include/api/: RecommendationController.h
server/include/db/: RestaurantDb.h
server/src/: WisdomRestaurantServer.cpp
server/src/ai/: AiService.cpp
server/src/api/: RecommendationController.cpp
server/src/db/: RestaurantDb.cpp
server/test/: README.md  TEST_GUIDE.md  camera_recommendation_test.cpp  camera_test.cpp  restaurant_client_test.cpp  simple_camera_test.c  simple_restaurant_test.cpp  test_new_architecture.sh
